# NYCU_Parallel_Programming_Final

./: CMakeLists.txt  Makefile  jpeg.py  jpeg_compression.cpp  my_program  readme.md  time_comparesion.xlsx
CUDA/: JPEGCompress.cu  Makefile  function.h  main.cpp  ycbcr.cu
OpenMP/: Makefile
OpenMP/src/include/: immintrin.h
Pthread/: Makefile  jpeg_pthread.cpp
cuda_jpeg/: JPEGCompress.cu  JPEGCompressPer.cu  Makefile  function.h  main.cpp  rgb_to_ycbcr
src/: Makefile  jpeg.cpp  jpeg_compression.cpp  jpeg_function_parallel.cpp  jpeg_pthread.cpp  jpeg_pthread2.cpp  main.cpp
